add dataset markdown

--- a/Personal Annual Income Forecast.ipynb
+++ b/Personal Annual Income Forecast.ipynb
@@ -24,6 +24,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset\n",
+    "The analysis uses the Adult Income dataset, a real-world dataset for income prediction:\n",
+    "\n",
+    "### Adult Dataset\n",
+    "- **Source**: Becker, B. & Kohavi, R. (1996). Adult [Dataset]. UCI Machine Learning Repository. https://doi.org/10.24432/C5XW20\n",
+    "- **Features**: 14 attributes including:\n",
+    "  - **Numerical Features**: age, education-num, capital-gain, capital-loss, hours-per-week\n",
+    "  - **Categorical Features**: workclass, education, marital-status, occupation, relationship, race, sex, native-country\n",
+    "- **Target Variable**: Income level (>50K, ≤50K)\n",
+    "- **Samples**: 48,842 instances\n",
+    "- **Characteristics**: \n",
+    "  - Imbalanced dataset\n",
+    "  - Mix of categorical and numerical features\n",
+    "  - Real-world data with missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
